--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         onclick="toggleTestimonial()"
       >
         <img
-          src="C:/Users/loisr/OneDrive/Documents/Davon_website/Riley .jpg"
+          src="Riley.jpg"
           alt="Picture of Riley"
           class="rounded-lg w-full object-cover max-h-[300px]"
         />
